syntax = "proto3";
package groxy.testdata;

option go_package = "github.com/Semior001/groxy/pkg/proxy/grpcx/grpctest;grpctest";

service ExampleService {
  rpc BiDirectional(stream StreamRequest) returns (stream StreamResponse) {}
  rpc ServerStream(StreamRequest) returns (stream StreamResponse) {}
  rpc ClientStream(stream StreamRequest) returns (StreamResponse) {}
  rpc Unary(StreamRequest) returns (StreamResponse) {}
}

message StreamRequest {
  string value = 1;
}

message StreamResponse {
  string value = 1;
}
